--- a/index.html
+++ b/index.html
@@ -29,7 +29,26 @@
     </div>
 </nav>
 
-
+<div class="row">
+    <div class="col-md-4">
+        <img src="./assets/imagenes/niños_y_cancer_1.gif" alt="gif de pagina">
+    </div>
+    <div class="col-md-8">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./assets/imagenes/niño_1.jpg" class="d-block w-100" alt="foto1">
+                </div>
+                <div class="carousel-item">
+                <img src="./assets/imagenes/niño_2.jpg" class="d-block w-100" alt="foto2">
+                </div>
+                <div class="carousel-item">
+                <img src="./assets/imagenes/niño_3.jpg" class="d-block w-100" alt="foto3">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
