--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 </nav>
 
-<div class="row">
+<div class="row align-items-center">
     <div class="col-md-4">
         <img src="./assets/imagenes/niños_y_cancer_1.gif" alt="gif de pagina">
     </div>
