--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </nav>
 
 <div class="row align-items-center">
-    <div class="col-md-4">
-        <img src="./assets/imagenes/niños_y_cancer_1.gif" alt="gif de pagina">
+    <div class="col-md-4 mx-auto">
+        <img class="rounded mx-auto d-block" src="./assets/imagenes/corazon_2.png" alt="corazon">
     </div>
     <div class="col-md-8">
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
