--- a/index.html
+++ b/index.html
@@ -28,62 +28,63 @@
         </ul>
     </div>
 </nav>
-
-<div class="row align-items-center">
-    <div class="col-md-4 mx-auto">
-        <img class="rounded mx-auto d-block" src="./assets/imagenes/corazon_2.png" alt="corazon">
-    </div>
-    <div class="col-md-8">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/imagenes/niño_1.jpg" class="d-block w-100" alt="foto1">
-                </div>
-                <div class="carousel-item">
-                <img src="./assets/imagenes/niño_2.jpg" class="d-block w-100" alt="foto2">
-                </div>
-                <div class="carousel-item">
-                <img src="./assets/imagenes/niño_3.jpg" class="d-block w-100" alt="foto3">
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col-md-4 mx-auto">
+            <img class="rounded mx-auto d-block" src="./assets/imagenes/corazon_2.png" alt="corazon">
+        </div>
+        <div class="col-md-8">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./assets/imagenes/niño_1.jpg" class="d-block w-100" alt="foto1">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="./assets/imagenes/niño_2.jpg" class="d-block w-100" alt="foto2">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="./assets/imagenes/niño_3.jpg" class="d-block w-100" alt="foto3">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<br>
-<div class="row">
-    <div class="col-md-12">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                <img src="./assets/imagenes/noticias/noti_1.JPG" class="card-img-top" alt="restauración">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+    <br>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                    <img src="./assets/imagenes/noticias/noti_1.JPG" class="card-img-top" alt="restauración">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="./assets/imagenes/noticias/noti_2.jpg" class="card-img-top" alt="torneo futbol">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="./assets/imagenes/noticias/noti_3.jpg" class="card-img-top" alt="a volar sky">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="./assets/imagenes/noticias/noti_2.jpg" class="card-img-top" alt="torneo futbol">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="./assets/imagenes/noticias/noti_3.jpg" class="card-img-top" alt="a volar sky">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-         </div>
+        </div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
