se agrego contenido a los thumbnails y se agrego título a sección

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         </div>
     </div>
     <br>
+    <div class="centrar-texto fondo-rosa rounded">
+        <h1>Últimas de la semana</h1>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="row">
@@ -58,7 +61,7 @@
                     <img src="./assets/imagenes/noticias/noti_1.JPG" class="card-img-top" alt="restauración">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text"> Inauguración y restructuración de la Unidad de Oncología Pediátrica de Concepción.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -68,7 +71,7 @@
                         <img src="./assets/imagenes/noticias/noti_2.jpg" class="card-img-top" alt="torneo futbol">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">XVI Tornero inter hospitales de futbolito y porristas 2019<p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -78,7 +81,7 @@
                         <img src="./assets/imagenes/noticias/noti_3.jpg" class="card-img-top" alt="a volar sky">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
