Se agrego contenido y fotos a cada noticia

--- a/noticias.html
+++ b/noticias.html
@@ -33,28 +33,30 @@
     <div class="row">
         <div class="col-sm">
             <div class="card" style="width: 18rem;">
-                <img src="./assets/imagenes/noticias/noti_1.JPG" class="card-img-top" alt="...">
+                <img src="./assets/imagenes/noticias/noti_1.JPG" class="card-img-top" alt="inauguracion">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Inauguración Unidad de Oncología</h5>
+                    <p class="card-text">El Hospital Guillermo Gran Benavente se inauguró en 1944, después del gran terremoto de 1939. Atiende a los pacientes de la 8ª Región recibiendo   unos 60 a 70 pacientes con cáncer o leucemia nuevos por año, lo que es comparable con los grandes hospitales pediátricos de Santiago. </p>
                 </div>
             </div>
         </div>
         <div class="col-sm">
             <div class="card" style="width: 18rem;">
-                <img src="./assets/imagenes/noticias/noti_2.jpg" class="card-img-top" alt="...">
+                <img src="./assets/imagenes/noticias/noti_2.jpg" class="card-img-top" alt="futbolito">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Torneo futbolito</h5>
+                    <p class="card-text">El Domingo 14 de abril 2019  se llevó a cabo el XVI Torneo de Futbolito y Porristas de la Fundación Niño y Cáncer en el Estadio del Banco Central ubicado en la Reina.
+
+                    Asistieron 500 personas aproximadamente. La actividad fue calificada como una de las mejores efectuada en estos 16 años. Se hizo una encuesta telefónica a las coordinadoras de cada hospital teniendo una excelente evaluación.</p>
                 </div>
             </div>
         </div>
         <div class="col-sm">
             <div class="card" style="width: 18rem;">
-                <img src="./assets/imagenes/noticias/noti_3.jpg" class="card-img-top" alt="...">
+                <img src="./assets/imagenes/noticias/noti_3.jpg" class="card-img-top" alt="sky">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">A volar con SKY</h5>
+                    <p class="card-text">La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
                 </div>
             </div>
         </div>
@@ -62,32 +64,37 @@
     <div class="row">
     <div class="col-sm">
         <div class="card" style="width: 18rem;">
-            <img src="./assets/imagenes/noticias/noti_1.JPG" class="card-img-top" alt="...">
+            <img src="./assets/imagenes/noticias/noti_4.jpg" class="card-img-top" alt="niño rehab">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Agradecimientos</h5>
+                <p class="card-text">Nuestro hijo Javier Opazo,fue diagnosticado el 23 de diciembre del 2011, con leucemia Promeolicitica llegando a clínica Davila para su tratamiento con el doctor Juan Quintana, donde gracias a Dios tuvimos la bendición de hacer contacto con su fundación en un momento tan difícil para nosotros como familia.</p>
             </div>
         </div>
     </div>
     <div class="col-sm">
         <div class="card" style="width: 18rem;">
-            <img src="./assets/imagenes/noticias/noti_2.jpg" class="card-img-top" alt="...">
+            <img src="./assets/imagenes/noticias/noti_5.jpg" class="card-img-top" alt="becas">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Becas de estudio</h5>
+                <p class="card-text">	
+                    El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer con becas académicas, para lograr la continuidad de estudios pendientes y obtener una profesión futura y reinserción en la sociedad.
+                    
+                    Las becas podrán atender a los jóvenes con estudios universitarios, técnicos profesionales o de centros de formación técnica. Así también podrán tener alcances  parciales y en ocasiones especiales, totales.</p>
             </div>
         </div>
     </div>
     <div class="col-sm">
         <div class="card" style="width: 18rem;">
-            <img src="./assets/imagenes/noticias/noti_3.jpg" class="card-img-top" alt="...">
+            <img src="./assets/imagenes/noticias/noti_6.jpg" class="card-img-top" alt="taller de musica">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>                                   
+                <h5 class="card-title">Taller de musica</h5>
+                <p class="card-text">Con gran éxito se desarrolló nuestra Tallarinata de Amor y Sonrisas el 30 de agosto en el Estadio del Banco Central. 
+                La velada estuvo animada por nuestro amigo y permanente colaborador Checho Hirane, además de contar con la extraordinaria presentación de Andrea Tessa y otros artistas invitados.</p>                                   
             </div>
         </div>
     </div>
 </div>
+
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
