--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text"> Inauguración y restructuración de la Unidad de Oncología Pediátrica de Concepción.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="noticias.html" class="btn btn-primary">Ir a Noticias</a>
                         </div>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">XVI Tornero inter hospitales de futbolito y porristas 2019<p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="noticias.html" class="btn btn-primary">Ir a Noticias</a>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="noticias.html" class="btn btn-primary">Ir a Noticias</a>
                         </div>
                     </div>
                 </div>
